k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-simulator
  labels:
    app: traffic-simulator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traffic-simulator
  template:
    metadata:
      labels:
        app: traffic-simulator
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: traffic-simulator
          image: 444065722670.dkr.ecr.us-east-1.amazonaws.com/traffic-simulator:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: traffic-simulator
  labels:
    app: traffic-simulator
spec:
  type: ClusterIP
  selector:
    app: traffic-simulator
  ports:
    - name: http
      port: 80
      targetPort: 8080
